syntax = "proto3";

package protobuf;
import "message.proto";

message BaseMsg {
  string deviceId = 1;        // deviceId , 必填。用户设备唯一标识
  string uidId = 2;           // uid , 必填。用户id
  StatusCode errorCode = 3;   // 错误码
  string errorMsg = 4;        // 错误提示


  DataType type = 5;          //消息类型
  oneof data{
    ConnectMessage connectMsg = 6;
    ChatMessage imMsg = 7 ;
    HeartBeat hbMsg = 8;
  }
}

//数据类型
enum DataType{
  TYPE_CONNECT_MSG = 0; //连接消息
  TYPE_IM_MSG = 1;      //Im消息
  TYPE_HB_MSG = 2;       //心跳消息
}


enum StatusCode {
  STATUS_CODE_SUCCESS = 0;
  ERROR_CODE_SESSION_Expired = 1;       // 未登录、session验证失败
  ERROR_CODE_PARAMETER_ERROR = 2;       //  参数错误
}